update: jwt token signin.

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,6 @@
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
-
 # production
 /build
 
@@ -26,6 +22,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+/data
 
 # vercel
 .vercel
